增加JVM参数